--- a/drivers/hwmon/Kconfig
+++ b/drivers/hwmon/Kconfig
@@ -2072,6 +2072,13 @@ config SENSORS_XGENE
 	  If you say yes here you get support for the temperature
 	  and power sensors for APM X-Gene SoC.
 
+config SENSORS_SMPRO
+	tristate "Ampere Computing SMpro hardware monitoring driver"
+	depends on I2C
+	help
+	  If you say yes here you get support for the thermal, voltage, current
+	  and power sensors of Ampere Computing's SoC with SMpro processor.
+
 if ACPI
 
 comment "ACPI drivers"
