--- a/arch/arm/boot/dts/aspeed-bmc-ampere-mtjade.dts
+++ b/arch/arm/boot/dts/aspeed-bmc-ampere-mtjade.dts
@@ -552,12 +552,12 @@
 	/*D0-D7*/	"","","","","","","","",
 	/*E0-E7*/	"","","","","","","","",
 	/*F0-F7*/	"PSU1_PWOK","PSU2_PWOK","BMC_SYS_ATX_PSON_L","","PGOOD","","","",
-	/*G0-G7*/	"","","","","","","","",
+	/*G0-G7*/	"S0_FW_BOOT_OK","","","","","","","",
 	/*H0-H7*/	"","","","","PSU1_B25","PSU2_B25","","",
 	/*I0-I7*/	"PSU1_PRESENT_N","PSU2_PRESENT_N","","","","","","",
 	/*J0-J7*/	"","","S0_AUTH_FAILURE_L","","","","","",
 	/*K0-K7*/	"","","","","","","","",
-	/*L0-L7*/	"","","","","","","","",
+	/*L0-L7*/       "","","","BMC_SYSRESET_L","","","","",
 	/*M0-M7*/	"","","","","","","","",
 	/*N0-N7*/	"","","","","","","","",
 	/*O0-O7*/	"","","","","","","","",
