--- a/arch/arm/boot/dts/aspeed-bmc-ampere-mtjade.dts
+++ b/arch/arm/boot/dts/aspeed-bmc-ampere-mtjade.dts
@@ -293,7 +293,7 @@
 		status = "okay";
 		m25p,fast-read;
 		label = "pnor";
-		/* spi-max-frequency = <100000000>; */
+		spi-max-frequency = <35000000>;
 	};
 };
 
