--- a/drivers/hwmon/Kconfig
+++ b/drivers/hwmon/Kconfig
@@ -1601,7 +1601,7 @@ config SENSORS_EMC6W201
 
 config SENSORS_SMPRO
 	tristate "Ampere Computing SMpro hardware monitoring driver"
-	depends on I2C
+	depends on MFD_SMPRO || COMPILE_TEST
 	help
 	  If you say yes here you get support for the thermal, voltage, current
 	  and power sensors of Ampere Computing's SoC with SMpro processor.
