ARM: dts: aspeed: mtjade: Add smpro-errmon node
This commit adds smpro-errmon node to Ampere MtJade device tree.
smpro-errmon driver monitors host related RAS errors.

Signed-off-by: Quan Nguyen <qnguyen@amperecomputing.com>

--- a/arch/arm/boot/dts/aspeed-bmc-ampere-mtjade.dts
+++ b/arch/arm/boot/dts/aspeed-bmc-ampere-mtjade.dts
@@ -416,6 +416,9 @@
 		misc {
 			compatible = "ampere,ac01-misc";
 		};
+		errmon {
+			compatible = "ampere,ac01-errmon";
+		};
 	};
 	smpro@4e {
 		compatible = "ampere,smpro";
@@ -425,6 +428,9 @@
 		};
 		misc {
 			compatible = "ampere,ac01-misc";
+		};
+		errmon {
+			compatible = "ampere,ac01-errmon";
 		};
 	};
 };
