--- a/drivers/char/ipmi/Kconfig
+++ b/drivers/char/ipmi/Kconfig
@@ -133,11 +133,15 @@ config ASPEED_BT_IPMI_BMC
 	  found on Aspeed SOCs (AST2400 and AST2500). The driver
 	  implements the BMC side of the BT interface.
 
+config SSIF_IPMI_BMC
+	tristate "SSIF IPMI BMC driver"
+
 config ASPEED_SSIF_IPMI_BMC
 	depends on ARCH_ASPEED || COMPILE_TEST
 	depends on I2C
+	select SSIF_IPMI_BMC
 	select I2C_SLAVE
-	tristate "SSIF IPMI bmc driver"
+	tristate "Aspeed SSIF IPMI BMC driver"
 	help
 	  Provides a driver for the SSIF IPMI interface found on
 	  Aspeed AST2500 SoC.
