arm:dts:mtjade: add the alternate BMC image partition
This patch adds the partition layout for the alternate BMC image, which is the
BMC's 2nd SPI NOR to the device tree. Mt. Jade board detects the alternate SPI NOR
 via CS#1 (CS#0 on Main BMC).

Test Case: In OpenBMC shell, run "cat /proc/mtd" and the result show as below:

        dev:    size   erasesize  name
        mtd0: 04000000 00010000 "bmc"
        mtd1: 00060000 00010000 "u-boot"
        mtd2: 00020000 00010000 "u-boot-env"
        mtd3: 00440000 00010000 "kernel"
        mtd4: 01740000 00010000 "rofs"
        mtd5: 00400000 00010000 "rwfs"
        mtd6: 04000000 00010000 "alt-bmc"
        mtd7: 00060000 00010000 "alt-u-boot"
        mtd8: 00020000 00010000 "alt-u-boot-env"
        mtd9: 00440000 00010000 "alt-kernel"
        mtd10: 01740000 00010000 "alt-rofs"
        mtd11: 00400000 00010000 "alt-rwfs"

Signed-off-by: Chanh Nguyen <chanh@amperemail.onmicrosoft.com>

--- a/arch/arm/boot/dts/aspeed-bmc-ampere-mtjade.dts
+++ b/arch/arm/boot/dts/aspeed-bmc-ampere-mtjade.dts
@@ -282,6 +282,43 @@
 		/* spi-max-frequency = <50000000>; */
 #include "openbmc-flash-layout.dtsi"
 	};
+
+	flash@1 {
+		status = "okay";
+		m25p,fast-read;
+		label = "alt-bmc";
+		/* spi-max-frequency = <50000000>; */
+		partitions {
+			compatible = "fixed-partitions";
+			#address-cells = <1>;
+			#size-cells = <1>;
+
+			u-boot@0 {
+				reg = <0x0 0x60000>;
+				label = "alt-u-boot";
+			};
+
+			u-boot-env@60000 {
+				reg = <0x60000 0x20000>;
+				label = "alt-u-boot-env";
+			};
+
+			kernel@80000 {
+				reg = <0x80000 0x440000>;
+				label = "alt-kernel";
+			};
+
+			rofs@c0000 {
+				reg = <0x4c0000 0x1740000>;
+				label = "alt-rofs";
+			};
+
+			rwfs@1c00000 {
+				reg = <0x1c00000 0x400000>;
+				label = "alt-rwfs";
+			};
+		};
+	};
 };
 
 &spi1 {
