--- a/arch/arm/boot/dts/aspeed-bmc-ampere-mtjade.dts
+++ b/arch/arm/boot/dts/aspeed-bmc-ampere-mtjade.dts
@@ -127,6 +127,18 @@
                         linux,code = <ASPEED_GPIO(H, 5)>;
                 };
 
+		psu1_present {
+                        label = "PSU1_PRESENT";
+                        gpios = <&gpio ASPEED_GPIO(I, 0) GPIO_ACTIVE_LOW>;
+                        linux,code = <ASPEED_GPIO(I, 0)>;
+                };
+
+		psu2_present {
+                        label = "PSU2_PRESENT";
+                        gpios = <&gpio ASPEED_GPIO(I, 1) GPIO_ACTIVE_LOW>;
+                        linux,code = <ASPEED_GPIO(I, 1)>;
+                };
+
 	};
 
 	gpioA0mux: mux-controller {
@@ -641,7 +653,7 @@
 	/*G0-G7*/	"S0_FW_BOOT_OK","SHD_REQ_L","","S0_OVERTEMP_L","","", \
 			"","",
 	/*H0-H7*/	"","","","","","","","",
-	/*I0-I7*/	"","","S1_BMC_SPECIAL_BOOT","","","","","",
+	/*I0-I7*/	"PSU1_PRESENT","PSU2_PRESENT","S1_BMC_SPECIAL_BOOT","","","","","",
 	/*J0-J7*/	"S0_HIGHTEMP_L","S0_FAULT_L","S0_SCP_AUTH_FAIL_L","", \
 			"","","","",
 	/*K0-K7*/	"","","","","","","","",
